# lofin365-data-collector

./: .env.example  .gitignore  LICENSE  README.md  analyze_local_finance.py  config.py  fetch_data_test.py  fetch_local_finance_data.py  process_local_finance_data.py  pyproject.toml
