[project]
name = "lofin365-data-collector"
version = "1.0.0"
description = "Korean Local Finance Data Collector for expenditure data by sub-projects (2016-2024)"
readme = "README.md"
license = { text = "MIT" }
keywords = ["finance", "data-collection", "korea", "local-government"]
requires-python = ">=3.12"
authors = [
  { name = "2kwonhee", email = "id@senterie.com" },
]

dependencies = [
    "requests~=2.32.3",
    "pandas~=2.2.3",
    "python-dotenv~=1.0.1",
    "ipykernel~=6.29.5",
    "openpyxl~=3.1.5",
    "seaborn~=0.13.2",
    "matplotlib~=3.10.1",
]

[project.urls]
Repository = "https://github.com/idencosmos/lofin365-data-collector"

[project.optional-dependencies]
dev = [
    "pytest~=8.0.0",
]